# Neve

./: ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  PHILOSOPHY.md  README.md  ROADMAP.md  neve-spec-v2.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/neve-builder/: Cargo.toml
crates/neve-builder/src/: analytics.rs  docker.rs  executor.rs  lib.rs  output.rs  sandbox.rs
crates/neve-common/: Cargo.toml
crates/neve-common/src/: interner.rs  lib.rs  span.rs
crates/neve-config/: Cargo.toml
crates/neve-config/src/: activate.rs  flake.rs  generate.rs  generation.rs  lib.rs  module.rs
crates/neve-derive/: Cargo.toml
crates/neve-derive/src/: derivation.rs  hash.rs  lib.rs  output.rs  resolve.rs
crates/neve-diagnostic/: Cargo.toml
crates/neve-diagnostic/src/: codes.rs  diagnostic.rs  lib.rs
crates/neve-eval/: Cargo.toml
crates/neve-eval/src/: ast_eval.rs  builtin.rs  env.rs  eval.rs  lib.rs  pattern.rs  value.rs
crates/neve-fetch/: Cargo.toml
crates/neve-fetch/src/: archive.rs  git.rs  lib.rs  url.rs  verify.rs
crates/neve-fmt/: Cargo.toml
crates/neve-fmt/src/: config.rs  format.rs  lib.rs  printer.rs
crates/neve-hir/: Cargo.toml
crates/neve-hir/src/: hir.rs  lib.rs  lower.rs  module_loader.rs  resolve.rs
crates/neve-lexer/: Cargo.toml
crates/neve-lexer/src/: lexer.rs  lib.rs  token.rs
crates/neve-lsp/: Cargo.toml
crates/neve-lsp/src/: backend.rs  capabilities.rs  document.rs  lib.rs  semantic_tokens.rs  symbol_index.rs
crates/neve-parser/: Cargo.toml
crates/neve-parser/src/: lib.rs  parser.rs  recovery.rs
crates/neve-std/: Cargo.toml
crates/neve-std/src/: io.rs  lib.rs  list.rs  map.rs  math.rs  option.rs  path.rs  result.rs  set.rs  string.rs
crates/neve-store/: Cargo.toml
crates/neve-store/src/: cache.rs  db.rs  gc.rs  lib.rs  nar.rs  path.rs  store.rs
crates/neve-syntax/: Cargo.toml
crates/neve-syntax/src/: ast.rs  expr.rs  lib.rs  pattern.rs  types.rs
crates/neve-typeck/: Cargo.toml
crates/neve-typeck/src/: check.rs  errors.rs  infer.rs  lib.rs  traits.rs  unify.rs
docs/: API.md  README.md  TUTORIAL.md  api.md  architecture.md  changelog.md  install.md  optimization-plan.md  philosophy.md  quickstart.md  spec.md  tutorial.md
neve-cli/: Cargo.toml
neve-cli/src/: main.rs  output.rs  platform.rs
neve-cli/src/commands/: build.rs  check.rs  config.rs  doc.rs  eval.rs  fmt.rs  info.rs  install.rs  mod.rs  remove.rs  repl.rs  run.rs  search.rs  store.rs  update.rs
scripts/: install.ps1  install.sh  test.sh
stage0/: README.md
stage0/pkgs/: bash.neve  binutils.neve  gcc.neve  make.neve  musl.neve  zlib.neve
tests/: README.md  builder.rs  common.rs  config.rs  derive.rs  end_to_end.rs  eval.rs  evaluation.rs  fetch.rs  fmt.rs  hir.rs  lexer.rs  lsp.rs  module_loading.rs  parser.rs  parsing.rs  std.rs  store.rs  type_checking.rs  typeck.rs
