[package]
name = "neve-workspace"
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/*",
    "neve-cli",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/MCB-SMART-BOY/neve"

[workspace.dependencies]
# Internal crates
neve-common = { path = "crates/neve-common" }
neve-diagnostic = { path = "crates/neve-diagnostic" }
neve-lexer = { path = "crates/neve-lexer" }
neve-syntax = { path = "crates/neve-syntax" }
neve-parser = { path = "crates/neve-parser" }
neve-hir = { path = "crates/neve-hir" }
neve-typeck = { path = "crates/neve-typeck" }
neve-eval = { path = "crates/neve-eval" }
neve-std = { path = "crates/neve-std" }
neve-derive = { path = "crates/neve-derive" }
neve-store = { path = "crates/neve-store" }
neve-fetch = { path = "crates/neve-fetch" }
neve-builder = { path = "crates/neve-builder" }
neve-config = { path = "crates/neve-config" }
neve-lsp = { path = "crates/neve-lsp" }
neve-fmt = { path = "crates/neve-fmt" }

# External dependencies
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
rustyline = "15"
logos = "0.15"
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
tempfile = "3"
# Platform-specific: nix crate only on Unix-like systems
nix = { version = "0.29", features = ["user", "fs", "process", "mount"] }
tower-lsp = "0.20"
async-trait = "0.1"
dashmap = "6"

# Dependencies for integration tests
[dev-dependencies]
neve-common = { path = "crates/neve-common" }
neve-diagnostic = { path = "crates/neve-diagnostic" }
neve-lexer = { path = "crates/neve-lexer" }
neve-syntax = { path = "crates/neve-syntax" }
neve-parser = { path = "crates/neve-parser" }
neve-hir = { path = "crates/neve-hir" }
neve-typeck = { path = "crates/neve-typeck" }
neve-eval = { path = "crates/neve-eval" }
neve-std = { path = "crates/neve-std" }
neve-derive = { path = "crates/neve-derive" }
neve-store = { path = "crates/neve-store" }
neve-fetch = { path = "crates/neve-fetch" }
neve-builder = { path = "crates/neve-builder" }
neve-config = { path = "crates/neve-config" }
neve-lsp = { path = "crates/neve-lsp" }
neve-fmt = { path = "crates/neve-fmt" }
tempfile = "3"
