[package]
name = "neve-builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
neve-derive.workspace = true
neve-store.workspace = true
neve-fetch.workspace = true
thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs", "process", "mount", "sched", "hostname", "resource"] }

[dev-dependencies]
