[package]
name = "neve-parser"
description = "Parser for Neve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
neve-common.workspace = true
neve-diagnostic.workspace = true
neve-lexer.workspace = true
neve-syntax.workspace = true
